--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "concurrently": "^4.1.0",
+    "cors": "^2.8.5",
     "express": "^4.16.4",
     "form-data": "^2.3.3",
     "history": "^4.9.0",
@@ -14,6 +15,7 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router": "^5.0.0",
+    "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.0",
     "reactstrap": "^8.0.0",
     "sweetalert2": "^8.10.1"
